Removing warnings and old code, preparing for 3.4 release