@@ -46,7 +46,7 @@ public class TeaLogging {
 		Logger logger = Logger.getLogger("tea");
 		logger.setUseParentHandlers(false);
 		try {
-			logger.addHandler(defaultHandler.newInstance());
+			logger.addHandler(defaultHandler.getDeclaredConstructor().newInstance());
 		} catch (SecurityException e) {
 			// TODO Auto-generated catch block
 			e.printStackTrace();
@@ -54,6 +54,12 @@ public class TeaLogging {
 			// TODO Auto-generated catch block
 			e.printStackTrace();
 		} catch (IllegalAccessException e) {
+			// TODO Auto-generated catch block
+			e.printStackTrace();
+		} catch (NoSuchMethodException e) {
+			// TODO Auto-generated catch block
+			e.printStackTrace();
+		}  catch (java.lang.reflect.InvocationTargetException e) {
 			// TODO Auto-generated catch block
 			e.printStackTrace();
 		}
@@ -91,10 +97,16 @@ public class TeaLogging {
 	 */
 	public static synchronized Handler getNewDefaultHandler() {
 		try {
-			return TeaLogging.defaultHandler.newInstance();
+			return TeaLogging.defaultHandler.getDeclaredConstructor().newInstance();
 		} catch (InstantiationException e) {
 			e.printStackTrace();
 		} catch (IllegalAccessException e) {
+			e.printStackTrace();
+		} catch (NoSuchMethodException e) {
+			// TODO Auto-generated catch block
+			e.printStackTrace();
+		}  catch (java.lang.reflect.InvocationTargetException e) {
+			// TODO Auto-generated catch block
 			e.printStackTrace();
 		}
 		return null;
